<resources>
    <string name="app_name">Recipes</string>
    <string name="bt_PrimerPlato">Primer plato</string>
    <string name="bt_SegundoPlato">Segundo plato</string>
    <string name="bt_Postres">Postres</string>

    <string name="bt_Macarrones">Macarrones</string>
    <string name="bt_Sopa">Sopa</string>
    <string name="bt_HuevoFrito">Huevo frito</string>

    <string name="bt_Hamburguesa">Hamburguesa</string>
    <string name="bt_Ensalada">Ensalada</string>
    <string name="bt_Salmon">Salmón</string>

    <string name="bt_Macedonia">Macedonia</string>
    <string name="bt_tartaQueso">Tarta de Queso</string>
    <string name="bt_Churros">Churros</string>

    <string name="tv_Ingredientes">Ingredientes</string>
    <string name="tv_PasosReceta">Pasos a seguir</string>
    <string name="tasks">Recipes</string>
    <string name="new_recipe">New Recipe</string>
    <string name="save">Save</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>