<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_primer_plato">

    <Button
        android:id="@+id/bt_Macedonia"
        android:layout_width="1000px"
        android:layout_height="200px"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="185dp"
        android:onClick="macarrones"
        android:text="@string/bt_Macarrones"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_tartaQueso"
        android:layout_width="1000px"
        android:layout_height="200px"
        android:onClick="sopa"
        android:text="@string/bt_Sopa"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_Macedonia" />

    <Button
        android:id="@+id/bt_Churros"
        android:layout_width="1000px"
        android:layout_height="200px"
        android:onClick="huevoFrito"
        android:text="@string/bt_HuevoFrito"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_tartaQueso" />

</androidx.constraintlayout.widget.ConstraintLayout>